Updated version number.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name=ansible-development-command
-version=0.3.0
+version=0.4.0
 author=Ryo Nishikawa
-author_email=ryo.pg.se@gmail.com
+author_email=ryo.pg.se+adc@gmail.com
 url=https://github.com/RyoNishikawa/
 description=development command for ansible.
 
